--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
-    <link rel="stylesheet" href="css/index.css">
+    <title>Page Title</Title></title>
 </head>
 <body>
-    <h1>Suparin Profile</h1>
-    <p>I am a student at King Mongkut's University</p>
-    <footer>Contact : s6603052421071@email.kmutnb.ac.th</footer>
+    <h1>This is a heading</h1>
+    <p>This is a paragraph.</p>
+    <p>This is another paragraph.</p>
 </body>
 </html>
