Update index.html with ul and ol
Update index.html with ul and ol

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Title</Title></title>
 </head>
-<body style="background-color: lightpink;">
-    <h1 style="color: rgb(226, 43, 104);">This is h1</h1>
-    <p style="color: rgb(230, 106, 68);">Paragraph.</p>
-    <p style="font-family: verdana;">Paragraph</p>
-    <p style="font-size: 160%;">Paragraph</p>
-    <p style="text-align: center;">Paragraph</p>
-    <p style="font-size: 160%; color: rgb(226, 91, 136); text-align: center;">Paragraph</p>
+<body>
+    <ul style="list-style-type: square;">
+        <li> Hello </li>
+        <li> World </li>
+    </ul>
+    <ol type="I">
+        <li> Hello </li>
+        <li> World </li>
+    </ol>
 </body>
 </html>
