--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Page Title</Title></title>
 </head>
 <body>
-    <ul style="list-style-type: square;">
+    <ul style="list-style-type: circle;">
         <li> Hello </li>
         <li> World </li>
     </ul>
-    <ol type="I">
+    <ol type="a">
         <li> Hello </li>
         <li> World </li>
     </ol>
