--- a/index.html
+++ b/index.html
@@ -3,16 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Title</Title></title>
+    <title>work</title>
 </head>
 <body>
-    <ul style="list-style-type: circle;">
-        <li> Hello </li>
-        <li> World </li>
-    </ul>
-    <ol type="a">
-        <li> Hello </li>
-        <li> World </li>
-    </ol>
+    <h1>สุภรินทร์ ศรีคล้อย</h1>
+    <hr>
+    <img src = "pom.png" style="width: 100px; height: 100px;">
+    <a href="http://www.google.com/"><img src="muu.png" style="width: 100px; height: 100px;"></a>
+<div style="background-color: lightgoldenrodyellow;">
+    <p style="color: firebrick;">สมการ x<sub>2</sub> - y<sub>2</sub> = (x+y)(x-y)</p>
+    <p style="color: firebrick;">ควรจะ<b>ต้องจำ</b>ไว้</p>
+</div>
+<br>
+<u>ความรู้ที่จำเป็นในการเขียนเว็บ</u>
+<br>
+<ul>
+    <li>ภาษา <i>HTML</i></li>
+    <li>ภาษา <i>PHP</i></li>
+    <li>ระบบฐานข้อมูล</li>
+    <li>เว็บ <a href="https://www.w3schools.com/">w3school</a></li>
+</ul>
 </body>
 </html>
