Update index.html css internal
Update index.html css internal

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>work</title>
+    <style>
+        body{
+            background-color: rgb(255, 211, 218);
+        }
+        h1{
+            color: purple;
+        }
+    </style>
 </head>
 <body>
     <h1>สุภรินทร์ ศรีคล้อย</h1>
