Update index.html with table
Update index.html with table

--- a/index.html
+++ b/index.html
@@ -3,33 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>work</title>
-    <style>
-        body{
-            background-color: rgb(255, 211, 218);
-        }
-        h1{
-            color: purple;
-        }
-    </style>
+    <title>Page Title</Title></title>
 </head>
 <body>
-    <h1>สุภรินทร์ ศรีคล้อย</h1>
-    <hr>
-    <img src = "pom.png" style="width: 100px; height: 100px;">
-    <a href="http://www.google.com/"><img src="muu.png" style="width: 100px; height: 100px;"></a>
-<div style="background-color: lightgoldenrodyellow;">
-    <p style="color: firebrick;">สมการ x<sub>2</sub> - y<sub>2</sub> = (x+y)(x-y)</p>
-    <p style="color: firebrick;">ควรจะ<b>ต้องจำ</b>ไว้</p>
-</div>
-<br>
-<u>ความรู้ที่จำเป็นในการเขียนเว็บ</u>
-<br>
-<ul>
-    <li>ภาษา <i>HTML</i></li>
-    <li>ภาษา <i>PHP</i></li>
-    <li>ระบบฐานข้อมูล</li>
-    <li>เว็บ <a href="https://www.w3schools.com/">w3school</a></li>
-</ul>
+    <table style="border: 5px solid black; width: 20%;">
+        <tr><th>ID</th><th>Name</th></tr>
+        <tr><td>001</td><td>Suparin</td></tr>
+        <tr><td>002</td><td>Srikhloi</td></tr>
+        <tr><td>003</td><td>Damrongkiat</td></tr>
+    </table>
 </body>
 </html>
