--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Title</Title></title>
+    <title>Page Title</title>
 </head>
 <body>
     <table style="border: 5px solid black; width: 20%;">
