--- a/index.html
+++ b/index.html
@@ -13,17 +13,12 @@
             background-color: yellow;
         }
     </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
-    <form>
-        Phone : <input type = "tel">
-        <br>
-        e-mail : <input type = "email" disabled = "disabled">
-    </form>
-        <a href="#news1">Content 1</a><br>
-        <a href="#news2">Content 2</a>
-        
-        <p id = "news1">Content 1</p>
-        <p id = "news2">Content 2</p>
+    <div class="container-lg">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam, ipsa saepe eveniet voluptas itaque nam repellendus, excepturi facilis eligendi similique corporis asperiores temporibus molestiae voluptate beatae praesentium ipsum perspiciatis, eaque accusantium! Similique delectus necessitatibus fugit quae dolor cupiditate voluptatem? Architecto, officia vero! Reiciendis obcaecati beatae veritatis possimus velit natus minima sequi iste totam aliquid accusamus iure, vitae, consectetur, ullam exercitationem quis adipisci modi eum atque nam. Quo, mollitia placeat voluptate esse numquam dolores, eveniet similique perferendis veritatis eum quasi soluta asperiores, quam maxime eos quaerat sed dolorum. Labore repellat provident, accusamus tempore commodi consectetur magni, ipsam, cum veniam eligendi modi?
+    </div>
 </body>
 </html>
