--- a/20.GridSystemBasic.html
+++ b/20.GridSystemBasic.html
@@ -10,17 +10,48 @@
 <body>
    <div class="container-fluid">
        <!-- 100% -->
-
-       
+       <div class="row">
+            <div class="alert alert-success col-sm-12">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem numquam inventore, nisi a ipsum dolorem molestias voluptates quaerat sint necessitatibus earum impedit voluptatibus, voluptatum dolor ratione optio, asperiores officia magnam?</p>
+            </div>
+       </div>
+       <br>
        <!-- 50% -->
-
-
+       <div class="row">
+            <div class="alert alert-success col-sm-6">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem numquam inventore, nisi a ipsum dolorem molestias voluptates quaerat sint necessitatibus earum impedit voluptatibus, voluptatum dolor ratione optio, asperiores officia magnam?</p>
+            </div>
+            <div class="alert alert-success col-sm-6">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem numquam inventore, nisi a ipsum dolorem molestias voluptates quaerat sint necessitatibus earum impedit voluptatibus, voluptatum dolor ratione optio, asperiores officia magnam?</p>
+            </div>  
+        </div>
        <!-- 33.33% -->
-
-
+       <div class="row">
+            <div class="alert alert-success col-sm-4">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem numquam inventore, nisi a ipsum dolorem molestias voluptates quaerat sint necessitatibus earum impedit voluptatibus, voluptatum dolor ratione optio, asperiores officia magnam?</p>
+            </div>
+            <div class="alert alert-success col-sm-4">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem numquam inventore, nisi a ipsum dolorem molestias voluptates quaerat sint necessitatibus earum impedit voluptatibus, voluptatum dolor ratione optio, asperiores officia magnam?</p>
+            </div>
+            <div class="alert alert-success col-sm-4">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem numquam inventore, nisi a ipsum dolorem molestias voluptates quaerat sint necessitatibus earum impedit voluptatibus, voluptatum dolor ratione optio, asperiores officia magnam?</p>
+            </div>  
+        </div>
         <!-- 25% -->
-
-
+        <div class="row">
+            <div class="alert alert-success col-sm-3">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse nulla repellat, placeat dolores, neque qui accusantium, laborum iusto similique repudiandae optio tenetur commodi reiciendis quo voluptates est error sequi molestiae?</p>
+            </div>
+            <div class="alert alert-success col-sm-3">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse nulla repellat, placeat dolores, neque qui accusantium, laborum iusto similique repudiandae optio tenetur commodi reiciendis quo voluptates est error sequi molestiae?</p>
+            </div>
+            <div class="alert alert-success col-sm-3">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse nulla repellat, placeat dolores, neque qui accusantium, laborum iusto similique repudiandae optio tenetur commodi reiciendis quo voluptates est error sequi molestiae?</p>
+            </div>
+            <div class="alert alert-success col-sm-3">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse nulla repellat, placeat dolores, neque qui accusantium, laborum iusto similique repudiandae optio tenetur commodi reiciendis quo voluptates est error sequi molestiae?</p>
+            </div>
+        </div>
    </div>
 </body>
 </html>
