--- a/22.Flexbox.html
+++ b/22.Flexbox.html
@@ -30,8 +30,15 @@
             <div class="p-4 bg-warning">Item 3</div>
         </div>
         <br>
-        <!-- column reverse -->
+        <!-- column-->
         <div class="d-flex flex-column bg-info">
+            <div class="p-4 bg-warning">Item 1</div>
+            <div class="p-4 bg-warning">Item 2</div>
+            <div class="p-4 bg-warning">Item 3</div>
+        </div>
+        <br>
+        <!-- column reverse -->
+        <div class="d-flex flex-column-reverse bg-info">
             <div class="p-4 bg-warning">Item 1</div>
             <div class="p-4 bg-warning">Item 2</div>
             <div class="p-4 bg-warning">Item 3</div>
